[project]
name = "graph-algorithms"
version = "1.0.0"
description = "Graph algorithms implementation with Bellman-Ford and Kruskal's algorithms"
authors = [
    {name = "Oscar Nolen", email = "onolen@charlotte.edu"},
    {name = "Prithvi Koka", email = "prithvi.koka@charlotte.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]
